[Chromoting] Make the state of the scale-to-fit button visible, and correct at startup.
BUG=116633

Review URL: https://chromiumcodereview.appspot.com/9798001

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@127972 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 4e8131f6e889a1cfbe138aa34833c4174d19fed2

--- a/remoting/webapp/main.css
+++ b/remoting/webapp/main.css
@@ -154,7 +154,7 @@ Component: Modal Dialog
   -webkit-transition: all 0.218s;
 }
 
-button:active {
+button:active, .toggle-button-active {
   background: #ebebeb -webkit-linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
   color: #333;
   -webkit-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2);
